--- a/admin/fnf/new-css/style.css
+++ b/admin/fnf/new-css/style.css
@@ -11,9 +11,14 @@ h1, h2, h3 {margin-top: 0;}
 ul, ol {margin: 0;}
 p {margin: 0;}
 html, body{
-	font-family: 'Open Sans', sans-serif;
+ 	font-family: 'Open Sans', sans-serif;
 	font-size: 100%;
 	background: #ffffff;
+    -webkit-animation: fadein 1s; /* Safari, Chrome and Opera > 12.1 */
+       -moz-animation: fadein 1s; /* Firefox < 16 */
+        -ms-animation: fadein 1s; /* Internet Explorer */
+         -o-animation: fadein 1s; /* Opera < 12.1 */
+            animation: fadein 1s;
 }
 /*body a{
 	transition:0.5s all;
@@ -23,6 +28,34 @@ html, body{
 	-ms-transition:0.5s all;
 }*/
 /*-- header_top --*/
+@keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
+
+/* Firefox < 16 */
+@-moz-keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
+
+/* Safari, Chrome and Opera > 12.1 */
+@-webkit-keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
+
+/* Internet Explorer */
+@-ms-keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
+
+/* Opera < 12.1 */
+@-o-keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
 .center {
     text-align: center;
 }
@@ -271,192 +304,6 @@ background: none repeat scroll 0 0 #F9F9F9;
 	height: 24px;
 	top: 6px;
 	right: 5px;
-}
-/* create_btn */
-.create_btn{
-	float: right;
-}
-.create_btn a{
-	text-transform: capitalize;
-	display:inline-block;
-	padding: 10px 20px;
-	font-size: 0.8725em;
-	color: #ffffff;
-	background: #ffcc33;
-	-webkit-transition: all 0.3s ease-in-out;
-	-moz-transition: all 0.3s ease-in-out;
-	-o-transition: all 0.3s ease-in-out;
-	transition: all 0.3s ease-in-out;
-}
-.create_btn a:hover{
-	background: #04B404;
-	color:#ffffff; 
-	text-decoration:none;
-}
-.create_btn a img{
-	vertical-align: top;
-	margin-top: 3px;
-}
-/* start icon styles */
-.icon1:before,.icon1:after {
-	content: "";
-	display: table;
-}
-.icon1:after {
-	clear: both;
-}
-.icon1 {
-	float:right;
-	zoom:1;
-	margin-right: 2%;
-}
-ul.icon1 {
-	padding:0;
-	list-style:none;
-}
-.icon1 li {
-	float: left;
-	position: relative;
-}
-.icon1 li:last-child{
-	border-right:none;
-}
-.icon1 li:hover > a {
-	color: #fafafa;
-}
-*html .icon1 li a:hover { /* IE6 only */
-	color: #fafafa;
-}
-.icon1 ul {
-	width:300px;
-	margin: 20px 0 0 0;
-	_margin: 0;
-	opacity: 0;
-	visibility: hidden;
-	position: absolute;
-	top: 42px;
-	z-index: 1;
-	right: -140px;
-	background: #ffffff;
-	-webkit-transition: all .2s ease-in-out;
-	-moz-transition: all .2s ease-in-out;
-	-ms-transition: all .2s ease-in-out;
-	-o-transition: all .2s ease-in-out;
-	transition: all .2s ease-in-out;
-	box-shadow: 0px 0px 5px #aaa;
-	-webkit-box-shadow: 0px 0px 5px #aaa;
-	-moz-box-shadow: 0px 0px 5px #aaa;
-	-o-box-shadow: 0px 0px 5px #aaa;
-}
-.icon1 li:hover > ul {
-	opacity: 1;
-	visibility: visible;
-	margin: 0;
-}
-.icon1 ul ul {
-	top: 6px;
-	left: 158px;
-	margin: 0 0 0 20px;
-	border-radius: 5px;
-	-webkit-border-radius: 5px;
-	-moz-border-radius: 5px;
-	-o-border-radius: 5px;
-}
-.icon1 ul li {
-	float: none;
-	display: block;
-	border: 0;
-}
-.icon1 ul li:first-child{
-	border-top:none;
-}
-.icon1 ul li:first-child a{
-	border-top-left-radius: 5px;
-	-webkit-border-top-left-radius: 5px;
-	-moz-border-top-left-radius: 5px;
-	-o-border-top-left-radius: 5px;
-}
-.icon1 ul li:last-child {   
-	-moz-box-shadow: none;
-	-webkit-box-shadow: none;
-	box-shadow: none;    
-}
-.icon1 ul a {    
-	_height: 10px; /*IE6 only*/
-	white-space: nowrap;
-	float: none;
-	text-transform: none;
-}
-.active-icon{
-	display: block;
-}
-.icon1 ul li:first-child > a:after {
-	content: '';
-	position: absolute;
-	left: 45%;
-	top: -30px;
-	border-left: 10px solid transparent;
-	border-right:10px solid transparent;
-	border-bottom:10px solid #f0f0f0;
-}
-.icon1 ul ul li:first-child a:after {
-	left: -100px;
-	top: 0%;
-	margin-top: -6px;
-	border-left: 0;	
-	border-bottom:20px solid transparent;
-	border-top: 20px solid transparent;
-	border-right:20px solid #323757;
-}
-/* Mobile */
-.icon1-trigger {
-	display: none;
-}
-.sub-icon1 img{
-	border:none;
-	display:inline-block;
-	vertical-align:middle;
-}
-.c1{
-	background: url(../new-images/art.png) no-repeat 0px 0px;
-	width: 32px;
-	height: 32px;
-	display: inline-block;
-	vertical-align: middle;
-	margin-top: 2px;
-}
-.c2{
-	background: url(../new-images/bag.png) no-repeat 0px 1px;
-	width: 32px;
-	height: 32px;
-	display: inline-block;
-	vertical-align: middle;
-}
-.icon1 .profile_img {
-	margin-top: 3px;
-}
-.sub-icon1 ul li h3{
-	text-align:center;
-	font-size: 1em;
-	color: #04B404;
-	text-transform:uppercase;
-	margin-bottom: 4%;
-}
-.sub-icon1 ul li p{
-	text-align:center;
-	font-size: 0.8125em;
-	color: #555555;
-	line-height: 1.8em;
-}
-.sub-icon1.list{
-	padding: 20px 0px;
-}
-.sub-icon1 ul li p a{
-	color: #04B404;
-}
-.sub-icon1 ul li p a:hover{
-	color: #555555;
-	text-decoration:underline;
 }
 /* start menu */
 .h_nav h4{
@@ -2571,7 +2418,7 @@ html[xmlns] .brand-slider-contain .slides {
     text-align: center;
     vertical-align: middle}
 .top-cart-wrapper {
-	float: left;
+	float: right;
 }
 .top-cart-wrapper:hover {
 }
@@ -2634,6 +2481,11 @@ height:3px;
 	box-shadow: 0 0 10px rgba(0,0,0,.2);
 	text-align: left;
 	z-index: 1000000;
+    	-webkit-transition: all 0.3s ease-in-out;
+	-moz-transition: all 0.3s ease-in-out;
+	-o-transition: all 0.3s ease-in-out;
+	transition: all 0.3s ease-in-out;
+
 min-height:100px}
 .top-cart-content:hover {
 }
@@ -2662,8 +2514,6 @@ min-height:100px}
 }
 
 .headnav-popup {
-	position: absolute;
-    top:0;
 	width: 100%;
 	background: none repeat scroll 0 0 #F0F0F0;
 	border-bottom: 1px solid #CECECE;
@@ -2996,28 +2846,20 @@ overflow: hidden;}
     overflow: hidden;
     text-overflow: ellipsis;
     white-space: nowrap;}
-.comparebox .addtocartbtn{width: 100%;position: relative;border: 1px solid #DA7C0C; display:inline-block; padding: 4px 68px 5px; border-radius: 4px; border: 1px solid #DDD; color:#FEFEFE; font-size:16px; 
-background: rgba(255,175,75,1);
-background: -moz-linear-gradient(top, rgba(255,175,75,1) 0%, rgba(255,146,10,1) 100%);
-background: -webkit-gradient(left top, left bottom, color-stop(0%, rgba(255,175,75,1)), color-stop(100%, rgba(255,146,10,1)));
-background: -webkit-linear-gradient(top, rgba(255,175,75,1) 0%, rgba(255,146,10,1) 100%);
-background: -o-linear-gradient(top, rgba(255,175,75,1) 0%, rgba(255,146,10,1) 100%);
-background: -ms-linear-gradient(top, rgba(255,175,75,1) 0%, rgba(255,146,10,1) 100%);
-background: linear-gradient(to bottom, rgba(255,175,75,1) 0%, rgba(255,146,10,1) 100%);
-filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffaf4b', endColorstr='#ff920a', GradientType=0 );
+.comparebox .addtocartbtn {
+    position: relative;
+    border: 1px solid #DA7C0C;
+    display: inline-block;
+    border-radius: 4px;
+    border: 1px solid #DDD;
+    color: #FEFEFE;
+    font-size: 16px;
+    background:#04b404;
+    transition:all 0.3s ease-in-out 0s
 }
-.comparebox .addtocartbtn:hover{ cursor:pointer;  transition: all 0.3s ease-out 0s;color:#FFFFFF; 
-background: rgba(255,175,75,1);
-background: -moz-linear-gradient(45deg, rgba(255,175,75,1) 0%, rgba(255,146,10,1) 100%);
-background: -webkit-gradient(left bottom, right top, color-stop(0%, rgba(255,175,75,1)), color-stop(100%, rgba(255,146,10,1)));
-background: -webkit-linear-gradient(45deg, rgba(255,175,75,1) 0%, rgba(255,146,10,1) 100%);
-background: -o-linear-gradient(45deg, rgba(255,175,75,1) 0%, rgba(255,146,10,1) 100%);
-background: -ms-linear-gradient(45deg, rgba(255,175,75,1) 0%, rgba(255,146,10,1) 100%);
-background: linear-gradient(45deg, rgba(255,175,75,1) 0%, rgba(255,146,10,1) 100%);
-filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffaf4b', endColorstr='#ff920a', GradientType=1 );
+.comparebox .addtocartbtn:hover {
+	background:#ffcc33
 }
-.comparebox .addtocartbtn:active{position:relative; top:1px; outline:none}
-
 .scroll-pane {width: 100%!important;}
 .w_sidebar .plus i{   background: url("../new-images/spriteimg.png") no-repeat scroll -35px -129px rgba(0, 0, 0, 0);
     display: block;
@@ -3129,7 +2971,7 @@ color: #04b404;
     padding:0;    
 }
 .main-cont > p{width:100%;margin: 0;}
-.main-cont p span{width:40%; display:inline-block}
+.main-cont p span{width:40%; display:inline-block; vertical-align: top;}
 .wishbutton{
     background: none repeat scroll 0 0 #04b404;
     border: medium none;
@@ -3152,7 +2994,7 @@ color: #04b404;
     top: 4px;
     width: 19px;
 }
-.logo > img {width: 220px;}
+.logo > img {width: 100%;}
 
 .sky-form h4 {
 position: relative; cursor:pointer;
@@ -3173,7 +3015,8 @@ position: relative; cursor:pointer;
 
 .w_sidebar {
     float: left;
-    width: 17%;
+    background:#fff;
+    width: 170px;
 }
 .filter_icon {
     background: none repeat scroll 0 0 #efefef;
@@ -3181,9 +3024,10 @@ position: relative; cursor:pointer;
     box-shadow: 1px 2px 5px 2px #ccc;
     left: 0;
     padding: 5px 10px;
-    position: absolute;
-    top: 24%;
+    position: fixed;
+    top: 50%;
     cursor:pointer;
+    z-index:9999;
     display:none
 }
 
@@ -3194,7 +3038,9 @@ position: relative; cursor:pointer;
     margin-top: 4px;
     color:#fff
 }
-
+.container > .row.center{
+    margin-bottom: 30px; border-bottom:1px dotted rgba(0, 0, 0, 0.2);
+}
 /*--media queries--*/
 @media (max-width:1024px){
 .grid_list {
@@ -3296,8 +3142,10 @@ position: relative; cursor:pointer;
     }
 
     #floating_filter {
-        display: none;
-    }
+    display: none;
+    top: 30%;
+    position: absolute !important;
+    z-index: 99}
 
     .look {
         right: 230px;
@@ -3334,8 +3182,37 @@ position: relative; cursor:pointer;
     .loginregisterform {
         width: 90%;
     }
+    .right_inner_categorydetailsimagesdetails {
+        width: 48%;
+        height:auto;
+        min-height:auto;
+    }
+    .boxgrid {
+        width: 25%; float:left
+    }
+    .categorydetails_info_bottom {
+         width: 75%;
+         float: left;
+    }
+    .right_inner_categorydetailsimagesdetails .loading {
+        background: rgba(0, 0, 0, 0) url("../new-images/loader.gif") no-repeat scroll center top;
+    }
+}
+@media (max-width:767px) {
+    #overlay_form .registerform, #overlay_form .loginform {
+        width: 90%;
+    }
+
 }
 @media (max-width:640px) {
+    .right_inner_categorydetailsimagesdetails {
+        width: 90%;
+        height:auto;
+        min-height:auto;
+    }
+    .boxgrid {
+        width: 25%; float:left
+    }
     .container {
         width: 600px;
     }
@@ -3409,10 +3286,7 @@ position: relative; cursor:pointer;
         line-height: 1.5em;
     }
 
-    .search {
-        display: none;
-    }
-
+    
     .span1_of_4 {
         width: 46.33333%;
         margin-left: 0;
